@@ -5,6 +5,7 @@ examples/create_and_print_mediainfo_statement.pl
 examples/create_and_print_mediainfo_statement_translated.pl
 examples/create_and_print_reference.pl
 examples/create_and_print_reference_translated.pl
+examples/create_and_print_sense.pl
 examples/create_and_print_sitelink.pl
 examples/create_and_print_snak.pl
 examples/create_and_print_snak_translated.pl
