@@ -31,7 +31,7 @@ SEE ALSO
         Wikibase reference pretty print helpers.
 
     Wikibase::Datatype::Print::Sense
-        TODO
+        Wikibase sense pretty print helpers.
 
     Wikibase::Datatype::Print::Sitelink
         Wikibase sitelink pretty print helpers.
